apps/api-v0-shim/environments/hz/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-v0-shim
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    projectcontour.io/response-timeout: "60s"
spec:
  ingressClassName: contour
  tls:
    - hosts:
        - api-v0-shim.hz.metacpan.org
      secretName: api-v0-shim-tls
  rules:
    - host: api-v0-shim.hz.metacpan.org
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: api-v0-shim
                port:
                  number: 80
